# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
inc/: BoardWidget.h  Canvas.h  GameBoard.h  GameOfLife.h  GameRule.h  SelectModePage.h  SettingWindow.h  TemplatePage.h
resources/: Canvas.ui  GameOfLife.ui  SelectModePage.ui  SettingPage.ui  TemplatePage.ui
src/: BoardWidget.cpp  Canvas.cpp  GameBoard.cpp  GameOfLife.cpp  GameRule.cpp  SelectModePage.cpp  SettingWindow.cpp  TemplatePage.cpp  main.cpp
